# begone-py

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
begone/: __init__.py  actions.py  bot.py  cache.py  config.py  detector.py  fingerprint.py  ocr.py
tools/: eval.py
